code/dotnet/OFDB/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.OFDB)](https://www.nuget.org/packages/FactSet.SDK.OFDB)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB api

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.8
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.OFDB -v 0.21.8
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.OFDB -Version 0.21.8
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.OFDB.Api;
using FactSet.SDK.OFDB.Client;
using FactSet.SDK.OFDB.Model;

namespace Example
{
    public static class AddSymbolDateExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.OFDB.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new CreateApi(config);
            var path = "path_example";  // string | Encode database path
            var addSymbolDate = new AddSymbolDate(); // AddSymbolDate | Required data for creating date in the database. At least one iterative field is required otherwise it will throw 400.

            try
            {
                SuccessPostResponse result = apiInstance.AddSymbolDate(path, addSymbolDate);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling CreateApi.AddSymbolDate: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CreateApi* | [**AddSymbolDate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/CreateApi.md#addsymboldate) | **POST** /v1/database/{path}/dates | 
*CreateApi* | [**AddSymbolDate3D**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/CreateApi.md#addsymboldate3d) | **POST** /v1/database/{path}/dates/{date}/symbols | 
*CreateApi* | [**AddSymbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/CreateApi.md#addsymbols) | **POST** /v1/database/{path}/symbols | 
*CreateApi* | [**CreateDatabase**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/CreateApi.md#createdatabase) | **POST** /v1/database/ | 
*ModifyApi* | [**DeleteDates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#deletedates) | **DELETE** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**DeleteSymbolDate3D**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#deletesymboldate3d) | **DELETE** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**DeleteSymbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#deletesymbols) | **DELETE** /v1/database/{path}/symbols/{symbol} | 
*ModifyApi* | [**UpdateSymbolDate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#updatesymboldate) | **PUT** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**UpdateSymbolDate3D**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#updatesymboldate3d) | **PUT** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**UpdateSymbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ModifyApi.md#updatesymbols) | **PUT** /v1/database/{path}/symbols/{symbol} | 
*ViewApi* | [**GetDatabase**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ViewApi.md#getdatabase) | **GET** /v1/database/{path} | 
*ViewApi* | [**GetDates**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ViewApi.md#getdates) | **GET** /v1/database/{path}/dates | 
*ViewApi* | [**GetFields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ViewApi.md#getfields) | **GET** /v1/database/{path}/fields | 
*ViewApi* | [**GetSymbols**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/ViewApi.md#getsymbols) | **GET** /v1/database/{path}/symbols | 


## Documentation for Models

 - [Model.AddDatabase](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddDatabase.md)
 - [Model.AddSymbolDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbolDate.md)
 - [Model.AddSymbolDate3D](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbolDate3D.md)
 - [Model.AddSymbolDate3DData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbolDate3DData.md)
 - [Model.AddSymbolDateData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbolDateData.md)
 - [Model.AddSymbols](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbols.md)
 - [Model.AddSymbolsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/AddSymbolsData.md)
 - [Model.DatabaseSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/DatabaseSchema.md)
 - [Model.InlineResponse202](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse202.md)
 - [Model.InlineResponse400](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse400.md)
 - [Model.InlineResponse400Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse400Errors.md)
 - [Model.InlineResponse400Source](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse400Source.md)
 - [Model.InlineResponse403](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse403.md)
 - [Model.InlineResponse403Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse403Errors.md)
 - [Model.InlineResponse404](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse404.md)
 - [Model.InlineResponse404Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse404Errors.md)
 - [Model.InlineResponse413](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse413.md)
 - [Model.InlineResponse413Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse413Errors.md)
 - [Model.InlineResponse429](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse429.md)
 - [Model.InlineResponse429Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/InlineResponse429Errors.md)
 - [Model.SuccessPostResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/SuccessPostResponse.md)
 - [Model.UpdateSymbolDate](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/UpdateSymbolDate.md)
 - [Model.UpdateSymbolDate3D](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/UpdateSymbolDate3D.md)
 - [Model.UpdateSymbolDate3DData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/UpdateSymbolDate3DData.md)
 - [Model.UpdateSymbols](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/UpdateSymbols.md)
 - [Model.UpdateSymbolsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/OFDB/v1/docs/UpdateSymbolsData.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
